--- a/orders.html
+++ b/orders.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <button id="addOrderBtn">Add Order</button>
+        <button id="addOrderBtn" class="btn">Add Order</button>
         <table id="orderTable">
             <thead>
                 <tr>
