--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <button id="addProductBtn">Add Product</button>
+        <button id="addProductBtn" class="btn">Add Product</button>
         <table id="productTable">
             <thead>
                 <tr>
