--- a/customers.html
+++ b/customers.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <button id="addCustomerBtn">Add Customer</button>
+        <button id="addCustomerBtn" class="btn">Add Customer</button>
         <table id="customerTable">
             <thead>
                 <tr>
